# Mcp_trial

./: README.md
trial/: README.md  pyproject.toml
trial/src/trial/: server.py
